[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Sprite/blue_01.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Statistics/StatisticsManager.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Shared Sprites/Explosion.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Ships",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 21 )

[sub_resource type="Animation" id=3]
resource_name = "Explode"
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_process"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DamageDetector:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DamageDetector:collision_layer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Reset"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DamageDetector:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DamageDetector:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 40 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
scale = Vector2( 5, 5 )
collision_mask = 0
script = ExtResource( 2 )

[node name="Statistics" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Ships"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 1440
limit_bottom = 3040

[node name="Fire_cooldown" type="Timer" parent="."]

[node name="FiringPosition" type="Node2D" parent="."]

[node name="LeftGun" type="Position2D" parent="FiringPosition"]
position = Vector2( -9.07188, -10.1196 )
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="RightGun" type="Position2D" parent="FiringPosition"]
position = Vector2( 8.95246, -10.9654 )
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="Explosion Sprite" type="Sprite" parent="."]
visible = false
rotation = 3.14159
texture = ExtResource( 4 )
hframes = 11
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Reset"
anims/Explode = SubResource( 3 )
anims/Reset = SubResource( 4 )

[node name="DamageDetector" type="Area2D" parent="."]
collision_mask = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetector"]
shape = SubResource( 2 )

[connection signal="timeout" from="Fire_cooldown" to="." method="_on_Fire_cooldown_timeout"]
[connection signal="area_entered" from="DamageDetector" to="." method="_onDamageDetector_area_entered"]
